WIP conflict refactoring